Add navigation header to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<header class="navbar">
+
+  <!-- LEFT: LOGO + NAME -->
+  <div class="nav-left">
+    <img src="assets/logo.png" alt="Otaku Tech Studio Logo" class="logo">
+    <span class="brand">OTAKU TECH STUDIO</span>
+  </div>
+
+  <!-- CENTER: MENU -->
+  <nav class="nav-center">
+    <a href="#">Animation</a>
+    <a href="#">Games</a>
+    <a href="#">Tech Studio</a>
+    <a href="#">Contact</a>
+  </nav>
+
+  <!-- RIGHT: LOGIN / SIGN UP -->
+  <div class="nav-right">
+    <a href="#" class="login">LOGIN</a>
+    <a href="#" class="signup">SIGN UP</a>
+  </div>
+
+</header>
 
