Refactor HTML structure and update header elements

--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
-<header class="navbar">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Otaku Tech Studio</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-  <!-- LEFT: LOGO + NAME -->
-  <div class="nav-left">
+<header class="main-header">
+  <div class="left">
     <img src="assets/logo.png" alt="Otaku Tech Studio Logo" class="logo">
-    <span class="brand">OTAKU TECH STUDIO</span>
+    <span class="site-name">OTAKU TECH STUDIO</span>
   </div>
 
-  <!-- CENTER: MENU -->
-  <nav class="nav-center">
-    <a href="#">Animation</a>
-    <a href="#">Games</a>
-    <a href="#">Tech Studio</a>
-    <a href="#">Contact</a>
+  <nav class="nav">
+    <a href="#">Animation<span>()</span></a>
+    <a href="#">Games<span>()</span></a>
+    <a href="#">Tech Studio<span>()</span></a>
+    <a href="#">Contact<span>()</span></a>
   </nav>
 
-  <!-- RIGHT: LOGIN / SIGN UP -->
-  <div class="nav-right">
+  <div class="auth">
     <a href="#" class="login">LOGIN</a>
     <a href="#" class="signup">SIGN UP</a>
   </div>
-
 </header>
 
+</body>
+</html>
